# python-template-repo

./: .gitignore  LICENSE  README.md  component.md  mypy.ini  pyproject.toml  requirements.txt  test_e2e.py  tests.md
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  pull_request_template.md
integration_test/: calculator_logger.py  logger_notifier.py
src/: calculator.py  logger.py  notifier.py
src/calculator/: __init__.py  calculator.py  pyproject.toml  test_calculator.py
src/logger/: __init__.py  logger.py  pyproject.toml  test_logger.py
src/notifier/: __init__.py  notifier.py  pyproject.toml  test_notifier.py
tests/: calculator_logger.py  e2e.py  logger_notifier.py  test_calculator.py  test_calculator_logger.py  test_logger.py  test_logger_notifier.py
