[project]
name = "notifier"
version = "0.1.0"
description = "Notifier component for sending alerts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["requests>=2.32.3", "pytest>=8.3.5"]

# Defines the build system required for setuptools
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
